# lumi

./: Cargo.toml  Dockerfile  config.toml.example  setup.sql
.github/workflows/: docker-publish.yml  sync-upstream.yml
src/: db.rs  handler.rs  main.rs
src/chat/: chatbot.rs  context.rs  mod.rs  social.rs
src/commands/: chat_mode.rs  mod.rs  reload.rs  reset_context.rs  system_prompt.rs
