[package]
name = "lumi"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
indoc = "2.0.6"
openai-api-rs = "6.0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
